--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.github.florent37:materialviewpager:1.2.3'
+//    implementation 'com.github.florent37:materialviewpager:1.2.3'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.jpardogo.materialtabstrip:library:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.0.0'
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation "com.github.futbolkolektyw:MaterialViewPager:1.4.0"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
